src/main/java/com/example/demo/__core/errors/except/Ex400.java
package com.example.demo.__core.errors.except;

public class Ex400 extends RuntimeException{
	public Ex400(String msg) {
		super(msg);
	}
}

